# oracletrace

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml  test_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question_or_discussion.md
.github/workflows/: tests.yml
changelogs/: index.html
changelogs/v2-0-0/: index.html
changelogs/v2-0-1/: index.html
changelogs/v3-0-0/: index.html
cli-reference/: index.html
docs/: mkdocs.yml
docs/docs/: cli-reference.md  examples.md  index.md  installation.md  quickstart.md
docs/docs/changelogs/: index.md  v2-0-0.md  v2-0-1.md  v3-0-0.md
docs/overrides/: main.html
examples/: cpu_hotspot.py  index.html  nested_calls.py  regression_demo.py
installation/: index.html
oracletrace/: cli.py  compare.py  tracer.py
oracletrace/reporters/: __init__.py  html.py
quickstart/: index.html
search/: search_index.json
tests/: test_cli.py  test_compare.py  test_html_reporter.py  test_placeholder.py  test_tracer.py
