[project]
name = "oracletrace"
version = "1.0.21"
description = "Detect Python performance regressions and compare execution traces with lightweight call graph visualization"
authors = [
    { name = "Kayk Caputo" },
    { name = "André Gustavo" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["rich"]

keywords = [
    "python profiler",
    "performance regression",
    "execution trace",
    "call graph",
    "performance comparison",
    "benchmark comparison",
    "trace analyzer",
    "python performance tool",
    "ci performance testing",
    "lightweight profiler"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.scripts]
oracletrace = "oracletrace.cli:main"

[project.urls]
Homepage = "https://github.com/KaykCaputo/oracletrace"
Repository = "https://github.com/KaykCaputo/oracletrace"
Issues = "https://github.com/KaykCaputo/oracletrace/issues"
